--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lemonsqueezy.ts": "^0.1.7",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
+    "pg": "^8.11.5",
+    "raw-body": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "simple-flakeid": "^0.0.5",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -32,6 +36,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/user-agents": "^1.0.4",
