--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "ahooks": "^3.7.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lemonsqueezy.ts": "^0.1.7",
